# sql-optimizer-app

./: README.md  pyproject.toml  run.sh
src/sql_optimizer_app/: app.py  util.py
